Following Video, created bunch of components and schema

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,12 @@
       {
         "name": "next"
       }
-    ]
+    ],
+      "paths": {
+        "@/*": [
+          "./*"
+        ]
+      },
   },
   "include": [
     "next-env.d.ts",
@@ -28,6 +33,7 @@
     "**/*.ts",
     "**/*.tsx"
   ],
+
   "exclude": [
     "node_modules"
   ]
