--- a/package.json
+++ b/package.json
@@ -1,19 +1,21 @@
 {
-  "name": "notion-clone",
+  "name": "notes-hub",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p2300",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format": "prettier --write \"./**/*.{js,jsx,ts,tsx}\""
   },
   "dependencies": {
-    "@blocknote/core": "^0.9.4",
-    "@blocknote/react": "^0.9.4",
-    "@clerk/clerk-react": "^4.26.3",
-    "@edgestore/react": "^0.1.4",
-    "@edgestore/server": "^0.1.4",
+    "@blocknote/core": "^0.14.0",
+    "@blocknote/react": "^0.14.0",
+    "@clerk/clerk-react": "^5.2.3",
+    "@edgestore/react": "^0.1.6",
+    "@edgestore/server": "^0.1.6",
+    "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -24,30 +26,31 @@
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "cmdk": "^0.2.0",
-    "convex": "^1.3.1",
-    "emoji-picker-react": "^4.5.2",
-    "lucide-react": "^0.284.0",
-    "next": "13.5.4",
-    "next-themes": "^0.2.1",
+    "cmdk": "^1.0.0",
+    "convex": "^1.12.1",
+    "emoji-picker-react": "^4.9.4",
+    "lucide-react": "^0.390.0",
+    "next": "14.2.3",
+    "next-themes": "^0.3.0",
+    "prettier": "^3.3.1",
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
     "react-textarea-autosize": "^8.5.3",
-    "sonner": "^1.0.3",
-    "tailwind-merge": "^1.14.0",
+    "sonner": "^1.5.0",
+    "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
-    "usehooks-ts": "^2.9.1",
-    "zod": "^3.22.4",
-    "zustand": "^4.4.3"
+    "usehooks-ts": "^3.1.0",
+    "zod": "^3.23.8",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10",
-    "eslint": "^8",
-    "eslint-config-next": "13.5.4",
+    "eslint": "^9",
+    "eslint-config-next": "14.2.3",
     "postcss": "^8",
     "tailwindcss": "^3",
     "typescript": "^5"
