--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@blocknote/core": "^0.14.0",
+    "@blocknote/mantine": "^0.14.1",
     "@blocknote/react": "^0.14.0",
     "@clerk/clerk-react": "^5.2.3",
     "@edgestore/react": "^0.1.6",
