--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
+    "react-icons": "^5.2.1",
     "react-textarea-autosize": "^8.5.3",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.3.0",
